--- a/app.yaml
+++ b/app.yaml
@@ -22,16 +22,11 @@ handlers:
   # directory.
 - url: /static
   static_dir: static
+  http_headers:
+    Access-Control-Allow-Origin: https://boggle-663ae.web.app
 
   # This handler routes all requests not caught above to your main app. It is
   # required when static routes are defined, but can be omitted (along with
   # the entire handlers section) when there are no static files defined.
 - url: /.*
   script: auto
-
-env_variables:
-  EBOOK_BUCKET: ebook-storage-maxshaberman
-  HELPER_BUCKET: ebook-helpers-maxshaberman
-  EBOOK_DATA: ebook_data.json
-  TMP_PATH: /tmp/tmp_ebook
-  
