--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ google-api-python-client
 google-cloud
 google-cloud-storage==2.1.0
 google-cloud-logging==3.0.0
+google-cloud-profiler
 gunicorn
 uvicorn==0.17.6
